# selector4nix

./: .envrc  CONTRIBUTING.md  Cargo.toml  LICENSE-NIX  README.md  flake.nix  garnix.yaml  renovate.json  rust-toolchain.toml  system-test-plan.md
.github/workflows/: release.yml  system-test.yml
components/selector4nix-db/: Cargo.toml
components/selector4nix-streaming/: Cargo.toml
components/selector4nix-streaming/src/: client.rs  lib.rs  throttler.rs
components/selector4nix-streaming/src/stream/: chunked.rs  chunked_tests.rs  full.rs  http_backend.rs  mod.rs
components/selector4nix-streaming/src/throttler/: adapter.rs  mod.rs  per_host.rs
docs/: configuration.md  credentials.example.toml  credentials.md  selector4nix.development.toml  selector4nix.example.toml
docs/architecture/: README.md  overview.md
docs/conventions/: README.md  error-handling.md  git-commits.md  logging.md  testing.md
nix/: darwin-module.nix  home-manager-module.nix  nixos-module.nix  overlay.nix  package.nix
nix/flake/: devshell.nix  overlay.nix
nix/flake/dev/: flake.nix
nix/modules/: darwin.nix  home-manager.nix  nixos.nix
src/: bootstrap.rs  cli.rs  error.rs  lib.rs  main.rs
src/api/: error.rs  state.rs
src/api/handlers/: cache_info.rs  index.html  nar.rs  nar_info.rs  status.rs
src/application/: mod.rs
src/domain/: mod.rs
src/infrastructure/: mod.rs
tests/integration/: config_test.rs  credential_test.rs  main.rs  nar_file_service_test.rs  nar_info_resolution_service_test.rs  nar_info_service_test.rs  status_query_usecase_test.rs  status_test.rs
(+94 files in other folders)
