[package]
name = "selector4nix-streaming"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
